Fixed flickering initial load animation

--- a/folio-fe/components/logo.module.sass
+++ b/folio-fe/components/logo.module.sass
@@ -1,7 +1,6 @@
 @import "../styles/vars"
 
 .logo
-  stroke: $color-secondary
+  stroke: transparentize($color-secondary, 1)
   stroke-linejoin: round
   stroke-linecap: round
-
